refactor: move the logic of working with sessions and security context from AuthService to separate classes